Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerUndefinedField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        return undefined
    end
end